3-istio-gw/specs/out.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: netshoot
  name: netshoot
spec:
  serviceAccount: netshoot
  containers:
  - command:
    - sleep
    - "360000"
    image: nicolaka/netshoot:latest
    name: netshoot
    resources: {}
  nodeSelector:
    kubernetes.io/os: linux
